[tool.poetry]
name = "experiments_python"
version = "0.1.0"
description = ""
authors = ["Arlan Jaska <ajaska@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
