[tool.poetry]
name = "experiments_python"
version = "0.1.0"
description = ""
authors = ["Arlan Jaska <ajaska@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^14.0"

[tool.poetry.dev-dependencies]
black = "^24.0"
flake8 = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
